Fix gap above column bottoms on the main page

--- a/dumbhippo/trunk/server/web/css2/main-positions.css
+++ b/dumbhippo/trunk/server/web/css2/main-positions.css
@@ -12,6 +12,10 @@
 	width:			230px;
 }
 
+.dh-zone-box-footer img {
+	display:		block;
+}
+
 .dh-zone-box-spacer {
 	width:			10px;
 }
